--- a/style.css
+++ b/style.css
@@ -50,13 +50,105 @@ header div ul{
     align-items: center;
 }
 .principal>div{
-    width: 90%;
-}
-.descripcion{
-    background-color: red;
+    width: 85%;
 }
 .contenido{
     background-color: blue;
 }
 
 /* estilos para bienvenida */
+.descripcion{
+    width: 100%;
+    display: inline-grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr 2fr;
+    align-items: start;
+}
+.bienvenida{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
+}
+.bienvenida img{
+    max-width: 100%;
+    max-height: 20em;
+}
+.resumen{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.info {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    max-height: 30%;
+}
+
+.info img{
+    max-width: 100%;
+}
+.info *{
+    margin:0;
+}
+.subinfo1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.subinfo2{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+.subinfo3{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.subinfo4{
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+.subinfo5{
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+.subinfo6{
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+.subinfo7{
+    grid-column: 1/3;
+    grid-row: 5/6;
+}
+.subinfo8{
+    grid-column: 1/2;
+    grid-row: 6/7;
+}
+.subinfo9{
+    grid-column: 2/3;
+    grid-row: 6/7;
+}
+.subinfo10{
+    grid-column: 1/2;
+    grid-row: 7/8;
+}
+.subinfo11{
+    grid-column: 2/3;
+    grid-row: 7/8;
+}
+.subinfo12{
+    grid-column: 1/2;
+    grid-row: 8/9;
+}
+.subinfo13{
+    grid-column: 2/3;
+    grid-row: 8/9;
+}
+.subinfo1,.subinfo7{
+    color: white;
+    background-color: rgb(10, 200, 230);
+    border: 1px solid black;
+    border-radius: 15px;
+    text-align: center;
+}
