--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*{
+    font-family:Verdana, Tahoma, sans-serif;
+    color: rgb(47, 47, 48);
+    line-height: 1.5em;
+}
+p,li{
+    font-size: 15px;
+}
 div{
     border: 1px solid black;
 }
@@ -5,12 +13,14 @@ div{
 /* estilos de header */
 
 header{
-    height: 10em;
+    background-color: brown;
+    height: 12em;
     width: 100%;
     display: inline-grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: auto;
     grid-template-columns: 1fr 1fr 1fr 4fr 1fr 1fr;
     align-content: center;
+    justify-content: start;
 }
 header div{
     text-align: center;
@@ -42,27 +52,44 @@ header div ul{
     grid-row: 0/1;
 }
 
-/* estilos de principal */
+/* ESTILOS DE PRINCIPAL(DIV DE LA PAGINA GENERAL(SIN CONTAR HEADER)) */
 
 .principal{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 1em;
 }
 .principal>div{
     width: 85%;
 }
+
+/* LATERAL ACTUAL(BANNERS) */
+
+.actual{
+    max-width: 25%;
+}
+.actual img{
+    width: 100%;
+}
+/* contenido de la pagina(texto) */
+
 .contenido{
     background-color: blue;
+    width: 85%;
 }
 
-/* estilos para bienvenida */
+/* ESTILOS PARA BIENVENIDA */
+
 .descripcion{
-    width: 100%;
+    max-width: 60%;
     display: inline-grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 4fr 3fr;
+    grid-template-rows: auto auto auto;
     align-items: start;
+}
+.descripcion>div{
+    margin:1.4em;
 }
 .bienvenida{
     grid-column: 1/3;
@@ -71,20 +98,25 @@ header div ul{
 }
 .bienvenida img{
     max-width: 100%;
-    max-height: 20em;
+    max-height: 29em;
 }
+
+/* RESUMEN GENERAL(TEXTO) */
+
 .resumen{
     grid-column: 1/2;
     grid-row: 2/3;
+    height: 30%;
 }
+
+/* INFORMACIÓN LATERAL */
 .info {
     grid-column: 2/3;
     grid-row: 2/3;
-    border-radius: 15px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    max-height: 30%;
+    height: 40%;
 }
 
 .info img{
@@ -92,6 +124,7 @@ header div ul{
 }
 .info *{
     margin:0;
+    font-size: 13px;
 }
 .subinfo1{
     grid-column: 1/3;
@@ -148,7 +181,12 @@ header div ul{
 .subinfo1,.subinfo7{
     color: white;
     background-color: rgb(10, 200, 230);
-    border: 1px solid black;
-    border-radius: 15px;
     text-align: center;
+}
+
+/* TABLA DE CONTENIDO */
+
+.tabla{
+    grid-column: 1/2;
+    grid-row: 3/4;
 }
