--- a/style.css
+++ b/style.css
@@ -9,21 +9,25 @@ p,li{
 div{
     border: 1px solid black;
 }
+.fondo{
+    background: url(imgs/background.jpg) no-repeat;
+    background-size: contain;
+}
 
 /* estilos de header */
 
 header{
-    background-color: brown;
-    height: 12em;
+    background-color: white;
+    height: 3.5em;
     width: 100%;
     display: inline-grid;
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr 1fr 4fr 1fr 1fr;
-    align-content: center;
-    justify-content: start;
 }
 header div{
     text-align: center;
+    height: 3.4em;
+    background-color: aqua;
 }
 header div ul{
     list-style: none;
@@ -34,6 +38,7 @@ header div ul{
 }
 .logo img{
     max-width: 100%;
+    max-height: 100%;
 }
 .menu{
     grid-column: 2/3;
@@ -58,7 +63,7 @@ header div ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 1em;
+    padding-top: 8em;
 }
 .principal>div{
     width: 85%;
@@ -67,21 +72,17 @@ header div ul{
 /* LATERAL ACTUAL(BANNERS) */
 
 .actual{
+    background-color: white;
     max-width: 25%;
 }
 .actual img{
     width: 100%;
 }
-/* contenido de la pagina(texto) */
-
-.contenido{
-    background-color: blue;
-    width: 85%;
-}
 
 /* ESTILOS PARA BIENVENIDA */
 
 .descripcion{
+    background-color: white;
     max-width: 60%;
     display: inline-grid;
     grid-template-columns: 4fr 3fr;
@@ -95,10 +96,10 @@ header div ul{
     grid-column: 1/3;
     grid-row: 1/2;
     justify-self: center;
+    text-align: center;
 }
 .bienvenida img{
     max-width: 100%;
-    max-height: 29em;
 }
 
 /* RESUMEN GENERAL(TEXTO) */
@@ -106,7 +107,6 @@ header div ul{
 .resumen{
     grid-column: 1/2;
     grid-row: 2/3;
-    height: 30%;
 }
 
 /* INFORMACIÓN LATERAL */
@@ -115,8 +115,7 @@ header div ul{
     grid-row: 2/3;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    height: 40%;
+    grid-template-rows: auto auto auto auto auto auto auto auto;
 }
 
 .info img{
@@ -189,4 +188,11 @@ header div ul{
 .tabla{
     grid-column: 1/2;
     grid-row: 3/4;
+}
+
+/* contenido de la pagina(texto) */
+
+.contenido{
+    background-color: blue;
+    width: 85%;
 }
